--- a/Assets/Scenes/Dungeon1_seo.yaml
+++ b/Assets/Scenes/Dungeon1_seo.yaml
@@ -59,7 +59,7 @@ GameObjects:
       Equipment: false
     RenderGroup: 1
     FrustumRange: 50
-  - Name: Empty Object
+  - Name: Badak
     UUID: 3262946885560902784
     Active: true
     Layer: Default
@@ -68,17 +68,17 @@ GameObjects:
     PassIndex: 0
     NumOBB: 0
     Com_Transform:
-      Translation: [0, 1.95251441, -4.43952131]
+      Translation: [0, -0.0067692399, -4.43952131]
       Rotation: [0, -0, 0]
-      Scale: [3.70357823, 1, 3.11460805]
+      Scale: [3.70357823, 0.199000001, 3.11460805]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Badak\
       MeshFileName: Floor3.fbx
       HasCollider: false
       Equipment: false
-    Translation: [0, 1.95251441, -4.43952131]
+    Translation: [0, -0.0067692399, -4.43952131]
     Rotation: [0, -0, 0]
-    Scale: [3.70357823, 1, 3.11460805]
+    Scale: [3.70357823, 0.199000001, 3.11460805]
     MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Badak\
     MeshFileName: Floor3.fbx
     HasCollider: false
