--- a/Assets/Scenes/Flogas_Dungeon.yaml
+++ b/Assets/Scenes/Flogas_Dungeon.yaml
@@ -50,7 +50,7 @@ GameObjects:
     UUID: 699671421534668245
     Active: true
     Layer: Default
-    Instancing: false
+    Instancing: true
     Type: Object
     PassIndex: 0
     NumOBB: 0
@@ -63,6 +63,12 @@ GameObjects:
       MeshFileName: Floor4.fbx
       HasCollider: false
       Equipment: false
+    Translation: [0.538563311, 0, -4.663692]
+    Rotation: [90, 1.99985135, 0]
+    Scale: [1.80127168, 1.26099718, 0.238833606]
+    MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Badak\
+    MeshFileName: Floor4.fbx
+    HasCollider: false
     RenderGroup: 1
     FrustumRange: 200
   - Name: Wall0
@@ -1520,7 +1526,7 @@ GameObjects:
     Com_Transform:
       Translation: [0, -0.583999753, -9.61990929]
       Rotation: [90, -0, 0]
-      Scale: [22.5215149, 26.0779991, 1.79999995]
+      Scale: [22.5215111, 26.0779991, 1.79999995]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -1546,6 +1552,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: Wall1
     UUID: 1483917860621449909
     Active: true
@@ -1644,8 +1651,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-7.69327307, 1.31196868, -8.28250313]
-      Rotation: [7.56229639, 26.7907486, 2.39110079e-07]
-      Scale: [0.294043392, 0.249826655, 0.607063591]
+      Rotation: [26.6557064, 11.588171, -4.35769152e-07]
+      Scale: [0.294046253, 0.249882281, 0.607060254]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -1671,6 +1678,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: LampFire
     UUID: 15770022732734872725
     Active: true
@@ -1681,8 +1689,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-3.36255193, 2.15149903, 1.52762651]
-      Rotation: [7.56229544, 26.7907505, 2.39110079e-07]
-      Scale: [0.64052546, 0.485242456, 1.3178066]
+      Rotation: [26.6557102, 11.588172, -4.35769152e-07]
+      Scale: [0.640533566, 0.485352099, 1.31778598]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -1708,6 +1716,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: Wall1
     UUID: 3639142049821933306
     Active: true
@@ -2037,8 +2046,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [3.45357752, 2.11951017, 1.27384841]
-      Rotation: [7.56229639, 26.7907486, 2.39110051e-07]
-      Scale: [0.63945812, 0.484241873, 1.31836307]
+      Rotation: [26.6557064, 11.5881701, -4.35769209e-07]
+      Scale: [0.639464974, 0.484353572, 1.31833613]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2064,6 +2073,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: LampFire
     UUID: 5691130930190213264
     Active: true
@@ -2074,8 +2084,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [7.93538809, 1.34698355, -8.84075165]
-      Rotation: [7.56229639, 26.7907505, 2.39110079e-07]
-      Scale: [0.319845974, 0.390251219, 1.31854451]
+      Rotation: [26.6557064, 11.588172, -4.35769209e-07]
+      Scale: [0.319849342, 0.390341401, 1.31851828]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2101,6 +2111,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: LampFire
     UUID: 5974207186220585515
     Active: true
@@ -2111,8 +2122,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [8.08104706, 1.34008193, -3.44539356]
-      Rotation: [7.56229639, 26.7907467, 2.39110051e-07]
-      Scale: [0.319748491, 0.390302986, 1.31836307]
+      Rotation: [26.6557064, 11.588171, -4.35769152e-07]
+      Scale: [0.319752157, 0.390393049, 1.31833613]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2138,6 +2149,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: LampFire
     UUID: 1671464895325951026
     Active: true
@@ -2148,8 +2160,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-7.58388233, 1.30740726, -0.59903425]
-      Rotation: [7.56229639, 26.7907505, 2.39110079e-07]
-      Scale: [0.319813401, 0.390389383, 1.31855476]
+      Rotation: [26.6557064, 11.588172, -4.35769152e-07]
+      Scale: [0.319816262, 0.390479952, 1.31854022]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2175,6 +2187,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: LampFire
     UUID: 5754051776145636077
     Active: true
@@ -2185,8 +2198,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [8.8090992, 2.12478662, -5.06439114]
-      Rotation: [7.56229639, 26.7907486, 2.39110051e-07]
-      Scale: [0.639956594, 0.484278142, 1.31840968]
+      Rotation: [26.6557083, 11.588171, -4.35769152e-07]
+      Scale: [0.639962435, 0.484388828, 1.31838918]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2212,6 +2225,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: LampFire
     UUID: 8218886197490550364
     Active: true
@@ -2222,8 +2236,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.99510837, 2.0846324, -11.0818748]
-      Rotation: [7.56229639, 26.7907467, 2.39110051e-07]
-      Scale: [0.639743984, 0.484314829, 1.31840968]
+      Rotation: [26.6557083, 11.588172, -4.35769152e-07]
+      Scale: [0.639749944, 0.4844248, 1.31838918]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2249,6 +2263,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: LampFire
     UUID: 4506074469666995895
     Active: true
@@ -2259,8 +2274,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-2.36362243, 2.15001464, -11.0893078]
-      Rotation: [7.56229544, 26.7907505, 2.39110079e-07]
-      Scale: [0.526442468, 0.642400444, 1.31858158]
+      Rotation: [26.6557064, 11.588172, -4.35769152e-07]
+      Scale: [0.526447773, 0.642552316, 1.31856179]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2286,6 +2301,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: LampFire
     UUID: 14101136375250397075
     Active: true
@@ -2296,8 +2312,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-8.99177265, 2.11422968, -4.94483566]
-      Rotation: [7.56229639, 26.7907505, 2.39110051e-07]
-      Scale: [0.540204048, 0.654771447, 1.45240355]
+      Rotation: [26.6557064, 11.588171, -4.35769152e-07]
+      Scale: [0.540209234, 0.654928446, 1.45238841]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2323,6 +2339,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: LampFire
     UUID: 5152656489460797690
     Active: true
@@ -2333,8 +2350,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.39247227, 2.56994104, 0.420668274]
-      Rotation: [7.56229544, 26.7907505, 2.39110079e-07]
-      Scale: [0.894830704, 0.727405608, 1.31858158]
+      Rotation: [26.6557064, 11.588172, -4.35769152e-07]
+      Scale: [0.894839168, 0.727573991, 1.31856179]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2360,6 +2377,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: LampFire
     UUID: 3014897176380867306
     Active: true
@@ -2370,8 +2388,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-1.08791733, 2.59111428, 0.498315632]
-      Rotation: [7.56229639, 26.7907486, 2.39110079e-07]
-      Scale: [0.912845433, 0.707253277, 1.31836307]
+      Rotation: [26.6557064, 11.588172, -4.35769152e-07]
+      Scale: [0.912854731, 0.70741874, 1.31833613]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2397,6 +2415,7 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      Alpha: 1
   - Name: Wall3
     UUID: 7857229646009060073
     Active: true
@@ -3320,6 +3339,47 @@ GameObjects:
         CharacterController: false
     RenderGroup: 1
     FrustumRange: 1
+  - Name: TownPortal
+    UUID: 18265442591277927376
+    Active: false
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 4
+    BillBord: false
+    Com_Transform:
+      Translation: [-1.82138831e-06, 0.546949327, -0.150000006]
+      Rotation: [-179.999893, -89.9999466, -179.999893]
+      Scale: [1, 2, 1]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Map\Portal\
+      MeshFileName: PortalEffect.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\FX_Sky_001_TEX_KKJ.dds
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\abs.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Mask\FX_Mask_002_1_TEX_KKJ.png
+      TextureNormalPath: ""
+      ScrollSpeedX: [1, 1, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 1.5
+      DistortionBias: 1.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      Alpha: 1
   - Name: PointLight01
     UUID: 4563585621494192207
     Active: true
@@ -3395,43 +3455,3 @@ GameObjects:
         CharacterController: false
     RenderGroup: 1
     FrustumRange: 1
-  - Name: TownPortal
-    UUID: 18265442591277927376
-    Active: false
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 4
-    BillBord: false
-    Com_Transform:
-      Translation: [-1.82138831e-06, 0.546949327, -0.150000006]
-      Rotation: [-179.999893, -89.9999466, -179.999893]
-      Scale: [1, 2, 1]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Map\Portal\
-      MeshFileName: PortalEffect.fbx
-      HasCollider: false
-      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\FX_Sky_001_TEX_KKJ.dds
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\abs.png
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Mask\FX_Mask_002_1_TEX_KKJ.png
-      TextureNormalPath: ""
-      ScrollSpeedX: [1, 1, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 1.5
-      DistortionBias: 1.5
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
