--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -352,9 +352,6 @@
     <ClInclude Include="..\Public\SlashWave.h">
       <Filter>05.Effect\FlogasDungeon\FireSlash</Filter>
     </ClInclude>
-    <ClInclude Include="..\Public\Fire_Boob.h">
-      <Filter>05.Effect\FlogasDungeon\FireExplosion</Filter>
-    </ClInclude>
     <ClInclude Include="..\Public\Fire_explosion.h">
       <Filter>05.Effect\FlogasDungeon\FireExplosion</Filter>
     </ClInclude>
@@ -372,9 +369,6 @@
     </ClInclude>
     <ClInclude Include="..\public\TownPortal.h">
       <Filter>02.GameObjects\Map\Portal\TownPortal</Filter>
-    </ClInclude>
-    <ClInclude Include="..\Public\Element_Bomb.h">
-      <Filter>05.Effect\FlogasDungeon</Filter>
     </ClInclude>
     <ClInclude Include="..\Public\EffectBloodDecal.h">
       <Filter>05.Effect\Blood</Filter>
@@ -399,6 +393,12 @@
     </ClInclude>
     <ClInclude Include="..\public\ThreadLoader.h">
       <Filter>97.Manager\ThreadPool</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\Element_Bomb.h">
+      <Filter>05.Effect\FlogasDungeon\ElementBomb</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Public\Bomb_Center.h">
+      <Filter>05.Effect\FlogasDungeon\ElementBomb</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -735,9 +735,6 @@
     <ClCompile Include="..\Private\SlashWave.cpp">
       <Filter>05.Effect\FlogasDungeon\FireSlash</Filter>
     </ClCompile>
-    <ClCompile Include="..\Private\Fire_Boob.cpp">
-      <Filter>05.Effect\FlogasDungeon\FireExplosion</Filter>
-    </ClCompile>
     <ClCompile Include="..\Private\Fire_explosion.cpp">
       <Filter>05.Effect\FlogasDungeon\FireExplosion</Filter>
     </ClCompile>
@@ -755,9 +752,6 @@
     </ClCompile>
     <ClCompile Include="..\private\TownPortal.cpp">
       <Filter>02.GameObjects\Map\Portal\TownPortal</Filter>
-    </ClCompile>
-    <ClCompile Include="..\Private\Element_Bomb.cpp">
-      <Filter>05.Effect\FlogasDungeon</Filter>
     </ClCompile>
     <ClCompile Include="..\Private\EffectBloodDecal.cpp">
       <Filter>05.Effect\Blood</Filter>
@@ -785,6 +779,12 @@
     </ClCompile>
     <ClCompile Include="..\private\ThreadLoader.cpp">
       <Filter>97.Manager\ThreadPool</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\Element_Bomb.cpp">
+      <Filter>05.Effect\FlogasDungeon\ElementBomb</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\Bomb_Center.cpp">
+      <Filter>05.Effect\FlogasDungeon\ElementBomb</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1191,6 +1191,9 @@
     </Filter>
     <Filter Include="97.Manager\ThreadPool">
       <UniqueIdentifier>{d9fbb0a9-0f8d-454d-8ef7-21d4bb5c9b71}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\FlogasDungeon\ElementBomb">
+      <UniqueIdentifier>{7e7a44ff-f87e-470c-b554-b0d6141be628}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
