--- a/Assets/Scenes/m_pxVertices2.yaml
+++ b/Assets/Scenes/m_pxVertices2.yaml
@@ -25,7 +25,7 @@ GameObjects:
     UUID: 12570807769345660294
     Active: true
     Layer: Default
-    Instancing: false
+    Instancing: true
     Type: Object
     PassIndex: 0
     NumOBB: 0
@@ -51,6 +51,12 @@ GameObjects:
       MeshFileName: Floor1.fbx
       HasCollider: false
       Equipment: false
+    Translation: [-0.0259912014, -0.431751668, 0]
+    Rotation: [0, -0, 0]
+    Scale: [5, 5, 5]
+    MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Badak\
+    MeshFileName: Floor1.fbx
+    HasCollider: false
     RenderGroup: 1
     FrustumRange: 100
   - Name: Wall
@@ -136,8 +142,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-3.68122411, -3.21823137e-07, -0.665211558]
-      Rotation: [-118.189697, 78.4992294, -179.999985]
-      Scale: [0.19718039, 0.197259456, 0.229548931]
+      Rotation: [-136.547928, -59.5966949, 180]
+      Scale: [0.20133245, 0.204826519, 0.23057951]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -174,8 +180,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-3.88122892, 0.308779508, 0.522710443]
-      Rotation: [-118.189697, 78.4992294, -179.999985]
-      Scale: [0.963959098, 0.957162678, 1.02747858]
+      Rotation: [-136.547928, -59.5966911, 180]
+      Scale: [0.984288812, 0.99388361, 1.0321418]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -213,7 +219,7 @@ GameObjects:
     Com_Transform:
       Translation: [-3.45907974, 2.72718154e-07, 4.04530668]
       Rotation: [0, -0, -90]
-      Scale: [1, 1.10000002, 1.0986768]
+      Scale: [1, 1.10000002, 1.09867656]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Effect\
       MeshFileName: untitled.fbx
@@ -243,7 +249,7 @@ GameObjects:
       SpriteTotal: 0
       SpriteSpeed: 5
       Alpha: 1
-  - Name: DecalTest
+  - Name: DecalCrash
     UUID: 16470094205010690303
     Active: true
     Layer: Default
@@ -252,16 +258,16 @@ GameObjects:
     PassIndex: 1
     BillBord: false
     Com_Transform:
-      Translation: [0.264552534, -0.00911124796, 0]
+      Translation: [0.264552534, -0.492807955, 0]
       Rotation: [0, -0, 0]
-      Scale: [1, 1, 1]
+      Scale: [0.699999988, 0.100000001, 0.699999988]
     Com_Decal:
       {}
     Effect_Setting:
       TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\001.png
-      TextureMaskPath: ..\..\Assets\Textures\Effect\DooDecal\FX_Crack_003.png
+      TextureMaskPath: ..\..\Assets\Textures\Effect\DooDecal\FX_Crack_007_TEX_KKJ.dds
       TextureNoisePath: ""
-      TextureNormalPath: ..\..\Assets\Textures\Effect\DooDecal\FX_CrackNormal_008_TEX_PYS.png
+      TextureNormalPath: ""
       ScrollSpeedX: [0, 0, 0]
       ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
       Distortion1: [0.100000001, 0.200000003]
@@ -281,6 +287,33 @@ GameObjects:
       SpriteTotal: 0
       SpriteSpeed: 5
       Alpha: 1
+  - Name: BoxCollider
+    UUID: 7517823684187096642
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 0
+    Com_Transform:
+      Translation: [0, -1, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_Collider:
+      Center: [0, 0, 0]
+      Type: Box
+      Size: [5, 1, 5]
+      Angle:
+        - 0
+        - 0
+        - 0
+      RigidBody:
+        Enabled: false
+        Gravity: false
+        Kinematic: false
+        CharacterController: false
+    RenderGroup: 1
+    FrustumRange: 1
   - Name: testMonster
     UUID: 8617912300921592626
     Active: true
