--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -403,6 +403,9 @@
     <ClInclude Include="..\Public\Bomb_Center.h">
       <Filter>05.Effect\FlogasDungeon\ElementBomb</Filter>
     </ClInclude>
+    <ClInclude Include="..\public\DecalCrash.h">
+      <Filter>05.Effect\PlayerEffect\DecalCrash</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -791,6 +794,9 @@
     </ClCompile>
     <ClCompile Include="..\Private\Bomb_Center.cpp">
       <Filter>05.Effect\FlogasDungeon\ElementBomb</Filter>
+    </ClCompile>
+    <ClCompile Include="..\private\DecalCrash.cpp">
+      <Filter>05.Effect\PlayerEffect\DecalCrash</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1200,6 +1206,9 @@
     </Filter>
     <Filter Include="05.Effect\FlogasDungeon\ElementBomb">
       <UniqueIdentifier>{7e7a44ff-f87e-470c-b554-b0d6141be628}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05.Effect\PlayerEffect\DecalCrash">
+      <UniqueIdentifier>{955afa30-b4de-4a59-b002-cbe5b58b7a92}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
