--- a/Assets/Scenes/BossSY.yaml
+++ b/Assets/Scenes/BossSY.yaml
@@ -21,89 +21,167 @@ GameObjects:
       Specular: [1, 1, 1, 1]
     RenderGroup: 1
     FrustumRange: 1
-  - Name: Empty Object
-    UUID: 8114685731527054045
+  - Name: E_MeteoEnd
+    UUID: 3916701776396286379
     Active: true
     Layer: Default
     Instancing: false
-    Type: Object
-    PassIndex: 0
-    NumOBB: 0
-    Com_Transform:
-      Translation: [12.9698343, 0, 0]
-      Rotation: [0, -0, 0]
-      Scale: [1, 1, 1]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon3\
-      MeshFileName: untitled.fbx
-      HasCollider: false
-      Equipment: false
-    RenderGroup: 1
-    FrustumRange: 50
-  - Name: O_WaterEA
-    UUID: 6269375272436398037
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Object
-    PassIndex: 0
-    NumOBB: 0
-    Com_Transform:
-      Translation: [0, 0, 4.11726952]
-      Rotation: [0, -0, 0]
-      Scale: [3, 3, 3]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Monster\WaterEA\
-      MeshFileName: waterEA.fbx
-      HasCollider: false
-      Equipment: false
-    RenderGroup: 1
-    FrustumRange: 10
-  - Name: O_Wolf
-    UUID: 16046188935930043936
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Object
-    PassIndex: 0
-    NumOBB: 1
+    Type: Effect
+    PassIndex: 1
+    BillBord: true
     Com_Transform:
       Translation: [0, 0, 0]
+      Rotation: [11.3099308, -0, 0]
+      Scale: [1.29115021, 0.991643369, 0.994288683]
+    Com_VIBuffer:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Ring.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_SelectRing_001_TEX_KKJ.png
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [-0.5, -0.899999976, 0]
+      ScrollSpeedY: [-1.10000002, -0.400000006, 2.29999995]
+      Distortion1: [-0.300000012, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0
+      DistortionBias: 0
+      FadeOut: true
+      FadeOutDuration: 1
+      FadeOutStratTime: 2
+      FadeIn: false
+      FadeInDuration: 2
+      FadeInStratTime: 0
+      EffectDuration: 3
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      Alpha: 0.300000012
+  - Name: E_BossFly
+    UUID: 12907802441406947660
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 6
+    BillBord: false
+    Com_Transform:
+      Translation: [0, -0.19158569, -4.71361923]
       Rotation: [0, -0, 0]
-      Scale: [1, 1, 1]
-    Com_Collider:
-      Center: [0, 0, 0]
-      Type: Capsule
-      Radius: 0.100000001
-      Height: 0.100000001
-      Angle:
-        - 0
-        - 0
-        - 0
-      RigidBody:
-        Enabled: true
-        Gravity: true
-        Kinematic: false
-        CharacterController: true
-    Com_OBB:
-      Center: [0.100000001, 0.100000001, 0]
-      Size: [0.5, 0.300000012, 0.300000012]
-      IsAttach: true
-      BoneName: Root
-      Offset: [0, 0.0900000036, 0]
-      CollisionType: 3
+      Scale: [1.5, 4, 1.5]
     Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Monster\Wolf\
-      MeshFileName: Wolf.fbx
+      MeshFilePath: ..\..\Assets\Meshes\Effect\
+      MeshFileName: cylinder_twist.fbx
       HasCollider: false
-      Equipment: false
-    Com_Stat:
-      Hp: [3.86244726, 0, 10, 10]
-      HpRegen: [0.100000001, 0.100000001]
-      Atk: [10, 0, 10]
-      Arm: [0, 0, 0]
-      Exp: [0, 10, 10]
-      Level: 1
-      Gold: 50
-    RenderGroup: 1
-    FrustumRange: 1
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\003.dds
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\002.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Wind001_TEX_HKJ.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Mask\teaa.dds
+      TextureNormalPath: ""
+      ScrollSpeedX: [0.800000012, 0.400000006, 0]
+      ScrollSpeedY: [1, 0, 2.29999995]
+      Distortion1: [0.200000003, 0.300000012]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 1.60000002
+      DistortionBias: 0.699999988
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      Alpha: 0.699999988
+    Children:
+      - 15813074674636003092
+      - 7937311397830142873
+  - Name: Circle
+    UUID: 15813074674636003092
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 1
+    BillBord: false
+    Com_Transform:
+      Translation: [-0.0486830473, 0.300000012, 0.193959355]
+      Rotation: [0, -0, 0]
+      Scale: [18, 1, 18]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\
+      MeshFileName: Circle.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\020.dds
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_wind_001_TEX_CJH.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\test.jpg
+      TextureNormalPath: ..\..\Assets\Textures\Effect\Normal\Test.dds
+      ScrollSpeedX: [-0.100000001, -0.200000003, 0]
+      ScrollSpeedY: [-0.200000003, -0.300000012, 2.29999995]
+      Distortion1: [1.39999998, -1]
+      Distortion2: [0.400000006, 0.300000012]
+      Distortion3: [0.100000001, 0.800000012]
+      DistortionScale: 0.5
+      DistortionBias: 0.5
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      Alpha: 0.600000024
+  - Name: dome
+    UUID: 7937311397830142873
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 8
+    BillBord: false
+    Com_Transform:
+      Translation: [-0.149278611, 3.76999998, 0]
+      Rotation: [0, -0, 0]
+      Scale: [6, 7, 6]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\
+      MeshFileName: dome.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\014.dds
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\teaa.dds
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_Noise_002_TEX_HKB_1.png
+      TextureNormalPath: ""
+      ScrollSpeedX: [0.100000001, 0.100000001, 0]
+      ScrollSpeedY: [0, 0, 2.29999995]
+      Distortion1: [0.300000012, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.200000003
+      DistortionBias: 0.100000001
+      FadeOut: false
+      FadeOutDuration: 0
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0
+      FadeInStratTime: 0
+      EffectDuration: 0
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      Alpha: 0.699999988
