--- a/Assets/Scenes/TestRoomLee.yaml
+++ b/Assets/Scenes/TestRoomLee.yaml
@@ -177,42 +177,33 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      OffsetColor: [0, 0, 0, 0]
   - Name: Empty Object
-    UUID: 7206933360400663509
+    UUID: 2352509968335960163
     Active: true
     Layer: Default
     Instancing: false
     Type: Effect
-    PassIndex: 0
+    PassIndex: 1
     BillBord: false
     Com_Transform:
-      Translation: [0, 0.693167865, 0]
+      Translation: [0, 1.07719445, 0]
       Rotation: [0, -0, 0]
       Scale: [1, 1, 1]
-    Com_RectInstance:
-      Shape: 0
-      InstNum: 100
-      Color: [1, 1, 1, 0]
-      Speed: 5
-      LifeTime: 5
-      Size: 1
-      StartRadian: 0
-      RadiationAngle: 30
-      LerpColor: false
-      SrcColor: [0, 0, 0, 0]
-      DestColor: [1, 1, 1, 0]
+    Com_VIBuffer:
+      {}
     Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\Spark.dds
-      TextureNoisePath: ""
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\001.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_bloodse.png
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\222.tga
       TextureNormalPath: ""
       ScrollSpeedX: [0, 0, 0]
       ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
       Distortion1: [0.100000001, 0.200000003]
       Distortion2: [0.100000001, 0.300000012]
       Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
+      DistortionScale: 0
+      DistortionBias: 0
       FadeOut: false
       FadeOutDuration: 0
       FadeOutStratTime: 0
@@ -224,3 +215,4 @@ GameObjects:
       SpriteNumY: 0
       SpriteTotal: 0
       SpriteSpeed: 5
+      OffsetColor: [0, 0, 0, 0.819999993]
